<resources>
    <string name="app_name">Quiz App</string>
    <string name="open_folder">Open Folder</string>
    <string name="welcome">Welcome</string>
    <string name="e_g_duminda">e.g. Duminda</string>
    <string name="start">START</string>
    <string name="flag_image">Flag Image</string>
    <string name="submit">SUBMIT</string>
    <string name="finish">FINISH</string>
    <string name="next_question">NEXT QUESTION</string>
    <string name="result">Result</string>
    <string name="image">Image</string>
    <string name="congratulations">Hey, Congratulations !</string>
</resources>